RESOLVED FIXED130034
REGRESSION (r159218): FrameView::layout() should destroy TemporaryChange<LayoutPhase> before destroying Ref<FrameView>
https://bugs.webkit.org/show_bug.cgi?id=130034
Summary REGRESSION (r159218): FrameView::layout() should destroy TemporaryChange<Layo...
Daniel Bates
Reported 2014-03-10 12:26:51 PDT
We should always destroy TemporaryChange<LayoutPhase> before destroying Ref<FrameView> in FrameView::layout() so as to ensure that the FrameView exists when we restore the original layout phase value.
Attachments
Patch (2.28 KB, patch)
2014-03-10 12:30 PDT, Daniel Bates
ap: review+
Daniel Bates
Comment 1 2014-03-10 12:27:04 PDT
Daniel Bates
Comment 2 2014-03-10 12:30:34 PDT
alan
Comment 3 2014-03-10 12:50:50 PDT
Comment on attachment 226330 [details] Patch Looks good.
Daniel Bates
Comment 4 2014-03-10 12:56:49 PDT
Note You need to log in before you can comment on or make changes to this bug.